# nicar2024-select-star

./: .gitignore  README.md  download-models.py  package-lock.json  package.json  pyproject.toml  requirements.txt  vite.config.js
data/: human-classifications.json  index.csv
notebooks/: CLASSIFY.ipynb  EXAMPLE.ipynb  SCRAPE.ipynb
src/: app.html
src/lib/: header.svelte
src/routes/: +page.js  +page.server.js  +page.svelte
src/routes/som/: +page.svelte
src/routes/tag/: +page.server.js  +page.svelte
static/: main.css
